--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
     <title>Page error 500</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href='static/css/style_400.css' />
+	<link href="{% static 'css/style_400.css %}" rel="stylesheet" />
 </head>
 <body>
 	<div id="notfound">
