--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
     <title>Page error 404</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 	<!-- Custom stlylesheet -->
-	<link href="{% static 'css/style_400.css %}" rel="stylesheet" />
+	<link href="{% static 'css/style_400.css' %}" rel="stylesheet" />
 </head>
 <body>
 	<div id="notfound">
