--- a/templates/500.html
+++ b/templates/500.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Page error 500</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
 	<!-- Custom stlylesheet -->
-	<link href="{% static 'css/style_400.css %}" rel="stylesheet" />
+	<link href="{% static 'css/style_400.css' %}" rel="stylesheet" />
 </head>
 <body>
 	<div id="notfound">
